--- a/style.css
+++ b/style.css
@@ -1,24 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600&display=swap");
+@import url('http://fonts.cdnfonts.com/css/lemonmilk');
+
 
 body {
     background: #0e192f;
     color: white;
+    /* font-family: 'Lemon/Milk', sans-serif; */
+    font-family: 'Lemon/Milk light', sans-serif;
 }
 
-::selection{
+::selection {
     background: transparent;
     color: #41a5e8;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     background-color: transparent;
     width: 3px;
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background-color: rgb(255, 255, 255);
 }
 
+.milk {
+    font-family: 'Lemon/Milk light', sans-serif;
+
+
+}
+.ls-12{
+    letter-spacing: 12px;
+}
 .mont {
     font-family: "Montserrat", sans-serif;
 }
@@ -34,22 +47,6 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
-.nav ul li span {
-    position: absolute;
-    width: 0.4rem;
-    height: 0.4rem;
-    background: white;
-    left: 50%;
-    transform: translateX(-50%);
-    top: -3px;
-    border-radius: 50%;
-    opacity: 0;
-    transition: opacity 0.6s;
-}
-
-.nav ul li:hover span {
-    opacity: 1;
-}
 
 .name {
     left: 50%;
@@ -82,6 +79,13 @@ body {
     bottom: 150px;
 }
 
+.swal-content__input {
+    color: black;
+}
+
+#username {
+    text-transform: capitalize;
+}
 
 
 /* -----------------cursor-------------- */
@@ -91,7 +95,7 @@ html {
     cursor: url("data:image/svg+xml,%3Csvg height='6' width='6' viewBox='0 0 8 8' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='4' cy='4' fill='%23eee' r='4'/%3E%3C/svg%3E") 3 3, auto;
 }
 
-  
+
 .cursor {
     display: none;
     position: fixed;
@@ -99,18 +103,19 @@ html {
     left: 0;
     width: var(--width);
     height: var(--height);
-    transform: translate(calc(var(--x) - var(--width) / 2), calc(var(--y) - var(--height) / 2)); 
+    transform: translate(calc(var(--x) - var(--width) / 2), calc(var(--y) - var(--height) / 2));
     transition: 150ms width cubic-bezier(0.39, 0.575, 0.565, 1),
         150ms height cubic-bezier(0.39, 0.575, 0.565, 1),
         150ms transform cubic-bezier(0.39, 0.575, 0.565, 1);
     z-index: 1;
     pointer-events: none;
     will-change: transform;
+    z-index: 99999;
 }
 
 @media (pointer: fine) {
     .cursor {
-        display: block; 
+        display: block;
     }
 }
 
@@ -123,14 +128,14 @@ html {
     bottom: 0;
     border-radius: var(--radius);
     border: 2px solid #41a5e8;
-    opacity: var(--scale); 
+    opacity: var(--scale);
     transform: scale(var(--scale));
     transition: 300ms opacity cubic-bezier(0.39, 0.575, 0.565, 1),
         300ms transform cubic-bezier(0.39, 0.575, 0.565, 1),
         150ms border-radius cubic-bezier(0.39, 0.575, 0.565, 1);
 }
- 
- 
+
+
 .mouseactive:hover {
     color: #41a5e8;
     border-radius: .5rem;
