--- a/style.css
+++ b/style.css
@@ -103,10 +103,12 @@ body {
 
 html {
     cursor: url("data:image/svg+xml,%3Csvg height='6' width='6' viewBox='0 0 8 8' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='4' cy='4' fill='%23eee' r='4'/%3E%3C/svg%3E") 3 3, auto;
+
 }
 
 
 .cursor {
+    mix-blend-mode: difference;
     display: none;
     position: fixed;
     top: 0;
@@ -191,8 +193,9 @@ html {
 }
 
 .product {
+    overflow: hidden;
     background: #fff;
-    padding: 30px 15px;
+    /* padding: 30px 15px; */
     margin: 0 20px 20px 0;
     border-radius: 5px;
     text-align: center;
@@ -216,7 +219,7 @@ html {
     text-decoration: none;
     color: #fff;
 }
- 
+
 .cart {
     position: fixed;
     background: #f3f3f3;
@@ -351,3 +354,1004 @@ body.open .lightbox {
 
 
 /* ---------------------Cart-End------------------------- */
+
+
+
+.img-thumbnail {
+    width: 3rem;
+}
+
+.search_item:hover {
+    background-color: #1d283f;
+}
+
+
+
+
+
+
+
+/* Search  */
+
+
+#search {
+    align-items: center;
+    background: rgba(0, 0, 0, .975);
+    height: 0;
+    display: flex;
+    justify-content: center;
+    opacity: 0;
+    position: fixed;
+    transition: all 0.5s;
+    width: 100vw;
+    will-change: transform, opacity;
+    z-index: -1;
+}
+
+#search:target {
+    height: 100vh !important;
+    opacity: 1;
+    width: 100vw !important;
+    z-index: 2;
+}
+
+#search:target .close-btn {
+    display: block;
+}
+
+#searchdata {
+    background: transparent;
+    border: solid #fff;
+    border-width: 0 0 1px 0;
+    color: #fff;
+    flex: 1 0 auto;
+    font-size: 2rem;
+    height: 2rem;
+    max-width: 80%;
+    outline: 0;
+    padding: 2rem 1rem;
+}
+
+.close-btn {
+    display: none;
+    color: #fff;
+    font-size: 2rem;
+    position: absolute;
+    top: 0.5rem;
+    right: 2rem;
+}
+
+/* Search  */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap');
+
+:root {
+    --white-light: rgba(255, 255, 255, 0.5);
+    --alice-blue: #f8f9fa;
+    --carribean-green: #41a5e8;
+    --gray: #ededed;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {}
+
+img {
+    width: 100%;
+    display: block;
+}
+
+.lg-title,
+.md-title,
+.sm-title {
+    font-family: 'Roboto', sans-serif;
+    padding: 0.6rem 0;
+    text-transform: capitalize;
+}
+
+.lg-title {
+    font-size: 2.5rem;
+    font-weight: 500;
+    text-align: center;
+    opacity: 0.9;
+    font-family: 'Lemon/Milk light', sans-serif;
+
+
+}
+
+.md-title {
+    font-size: 2rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.sm-title {
+    font-weight: 300;
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+
+.text-light {
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.5;
+    opacity: 0.5;
+    margin: 0.4rem 0;
+}
+
+.products {
+    padding: 3.2rem 0;
+}
+
+.products .text-light {
+    text-align: center;
+    width: 70%;
+    margin: 0.9rem auto;
+}
+
+.product {
+    margin: .75rem;
+    position: relative;
+}
+
+.product-content {
+    background: var(--gray);
+    padding: 1rem;
+    height: 60%;
+}
+
+.product-img {
+    background: var(--white-light);
+    box-shadow: 0 0 20px 10px var(--white-light);
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    border-radius: 50%;
+    transition: background 0.5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 23vh;
+}
+
+.product-btns {
+    display: flex;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 999;
+}
+
+.btn-cart,
+.btn-buy {
+    background: transparent;
+    border: 1px solid black;
+    padding: 0.8rem 0;
+    width: 125px;
+    font-family: inherit;
+    text-transform: uppercase;
+    border: none;
+    transition: all 0.6s ease;
+    font-size: 12px;
+    color: black;
+    position: relative;
+    z-index: 999;
+}
+
+.btn-cart {
+    background: black;
+    color: white;
+}
+
+.btn-cart:hover {
+    background: var(--carribean-green);
+}
+
+.btn-buy {
+    background: white;
+}
+
+.btn-buy:hover {
+    background: var(--carribean-green);
+    color: #fff;
+}
+
+.product-info {
+    background: white;
+    padding: 1rem;
+}
+
+.product-info-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.rating span {
+    color: var(--carribean-green);
+}
+
+.product-name {
+    color: black;
+    display: block;
+    text-decoration: none;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+
+}
+
+.product-name.trunc {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.product-price {
+    padding-top: 0.6rem;
+    padding-right: 0.6rem;
+    display: inline-block;
+}
+
+.product-price.home {
+    padding-top: 0;
+    padding-right: 0;
+    display: inline-block;
+}
+
+.product-price:first-of-type {
+    text-decoration: line-through;
+    color: var(--carribean-green);
+}
+
+.product-price:last-of-type {
+    color: #212121;
+}
+
+.product-img img {
+    transition: transform 0.6s ease;
+    position: relative;
+    z-index: 0;
+}
+
+.product:hover .product-img img {
+    transform: scale(1.1);
+}
+
+.product:hover .product-img {
+    background: var(--carribean-green);
+}
+
+.product:hover .product-btns {
+    opacity: 1;
+}
+
+.off-info .sm-title {
+    background: var(--carribean-green);
+    color: white;
+    display: inline-block;
+    padding: 0.5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    z-index: 1;
+    letter-spacing: 3px;
+}
+
+/* product collection */
+.product-collection {
+    padding: 3.2rem 0;
+}
+
+.product-collection-wrapper {
+    padding: 3.2rem 0;
+}
+
+.product-col-left {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("assets/img/fashion-img-1.jpg") center/cover no-repeat;
+}
+
+.product-col-r-top {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("assets/img/fashion-img-2.png") center/cover no-repeat;
+}
+
+.flex-element {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 50vh;
+    padding: 2rem 1.5rem 3.2rem;
+    margin: 5px;
+}
+
+.product-col-r-bottom>div:first-child {
+    background: #eaa001;
+}
+
+.product-col-r-bottom>div:last-child {
+    background: #0090ff;
+}
+
+.product-col-content {
+    text-align: center;
+    color: white;
+}
+
+.product-collection .text-light {
+    opacity: 1;
+    font-size: 0.8;
+    font-weight: 400;
+    line-height: 1.7;
+}
+
+.btn-dark {
+    background: black;
+    color: white;
+    outline: 0;
+    border-radius: 25px;
+    padding: 0.7rem 1rem;
+    border: 0;
+    margin-top: 1rem;
+    transition: all 0.6s ease;
+    font-size: 1rem;
+    font-family: inherit;
+}
+
+.btn-dark:hover {
+    background: var(--carribean-green);
+}
+
+#card_items {
+    transform: translatey(15px);
+    transition: .3s all;
+}
+
+
+
+
+
+.product-items {
+    display: grid;
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 1200px) {
+    .product-content {
+        height: 66%;
+    }
+
+    .product-items {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .product {
+        margin-right: 1rem;
+        margin-left: 1rem;
+    }
+
+    .products .text-light {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .product-items {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .product {
+        margin-right: 1rem;
+        margin-left: 1rem;
+    }
+
+    .products .text-light {
+        width: 50%;
+    }
+
+    .product-content {
+        height: 63%;
+    }
+
+    .product-img {
+        height: 17vh;
+    }
+}
+
+@media screen and (max-width: 1140px) {
+    .product-items {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 870px) {
+    .product-items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .shop-item-image {
+        width: 55%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .product-items {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .shop-item-image {
+        width: 53%;
+    }
+}
+
+
+.wrapper {
+    height: 100%;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 767px) {
+    .wrapper {
+        padding: 50px 10px;
+    }
+}
+
+.slick-slider {
+    min-width: 0;
+}
+
+.slick-list {
+    overflow: hidden;
+}
+
+.slick-track {
+    display: flex;
+    align-items: flex-start;
+}
+
+.slider {
+    position: relative;
+    padding: 0px 60px;
+}
+
+@media (max-width: 767px) {
+    .slider {
+        padding: 0px 40px;
+    }
+}
+
+.slider .slick-arrow {
+    position: absolute;
+    top: 50%;
+    margin: -20px 0px 0px 0px;
+    z-index: 10;
+    font-size: 0;
+    width: 30px;
+    height: 30px;
+}
+
+.slider .slick-arrow.slick-prev {
+    left: 0;
+    background: url("https://img.icons8.com/ios/50/000000/long-arrow-left.png") 0 0 / 100% no-repeat;
+    filter: invert(1);
+}
+
+.slider .slick-arrow.slick-next {
+    right: 0;
+    background: url("https://img.icons8.com/ios/50/000000/long-arrow-right.png") 0 0 / 100% no-repeat;
+    filter: invert(1);
+}
+
+.slider .slick-arrow.slick-disabled {
+    opacity: 0.2;
+}
+
+
+
+.slider__item {
+    padding: 0px 15px;
+}
+
+.slider__item.slider_card {
+    padding: 0px;
+    position: relative;
+    transition: .3s all;
+}
+
+.slider__item.slider_card::after {
+    padding: 0px;
+    position: relative;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, #41a5e8, #41a5e8a3);
+    opacity: 0;
+    transition: all .9s;
+}
+
+.slider__item.slider_card .btn-buy:hover {
+    background-color: #212121;
+}
+
+.slider__item.slider_card::after {
+    padding: 0px;
+    position: relative;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, #41a5e8, #41a5e8a3);
+    opacity: 0;
+    transition: all .9s;
+}
+
+.slider__item.slider_card:hover::after {
+    opacity: 1;
+}
+
+.slider__item.slider_card:hover {
+    transform: scale(1.065);
+}
+
+.off-info .sm-title {
+    transition: .5s;
+}
+
+.slider__item.slider_card:hover .off-info .sm-title {
+    background-color: #fff;
+    color: #111;
+}
+
+
+.slider__item img {
+    max-width: 100%;
+}
+
+
+
+.content-section {
+    padding: 0 2rem;
+    height: 100%;
+    overflow: auto;
+}
+
+.main-footer-container ul {
+    flex-grow: 1;
+    text-align: end;
+}
+
+.footer-nav li {
+    padding: 0 .5em;
+}
+
+.footer-nav img {
+    width: 30px;
+    height: 30px;
+}
+
+.btn {
+    text-align: center;
+    vertical-align: middle;
+    padding: .67em .67em;
+    cursor: pointer;
+}
+
+.btn-header {
+    margin: .5em 15% 2em 15%;
+    color: white;
+    border: 2px solid #2D9CDB;
+    background-color: rgba(255, 255, 255, .1);
+    border-radius: 0;
+    font-size: 1.5em;
+    font-weight: lighter;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+.btn-header:hover {
+    background-color: rgba(255, 255, 255, .3);
+}
+
+.btn-play {
+    display: block;
+    margin: 0 auto;
+    color: #2D9CDB;
+    font-size: 4em;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    padding: 0;
+    text-align: center;
+}
+
+.btn-primary {
+    color: white;
+    background-color: #56CCF2;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.btn-primary:hover {
+    background-color: #2D9CDB;
+}
+
+.tour-row {
+    border-bottom: 1px solid black;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+}
+
+.tour-row:last-child {
+    border: none;
+}
+
+.tour-item {
+    display: inline-block;
+    padding-right: .5em;
+}
+
+.tour-date {
+    color: #555;
+    width: 11%;
+    font-weight: bold;
+}
+
+.tour-city {
+    width: 24%;
+}
+
+.tour-arena {
+    width: 42%;
+}
+
+.tour-btn {
+    max-width: 19%;
+}
+
+.shop-item {
+    margin: 30px;
+}
+
+.shop-item-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.shop-item-image {
+    width: 80%;
+}
+
+.shop-item-details {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
+
+.shop-item-price {
+    flex-grow: 1;
+    color: #333;
+}
+
+.flex .shop-item-price {
+    flex-grow: unset;
+}
+
+.shop-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.cart-header {
+    font-weight: bold;
+    font-size: 14px;
+    color: #333;
+}
+
+.cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+
+.cart-row {
+    display: flex;
+}
+
+.cart-item {
+    width: 45%;
+}
+
+.cart-price {
+    width: 20%;
+    color: #333;
+}
+
+.cart-quantity {
+    width: 35%;
+}
+
+.cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 12px;
+}
+
+.cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.btn-danger:hover {
+    background-color: #CC4C4C;
+}
+
+.cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+}
+
+.cart-row:last-child {
+    border-bottom: 1px solid black;
+}
+
+.cart-row:last-child .cart-column {
+    border: none;
+}
+
+.cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+}
+
+.cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+}
+
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
+}
+
+.User-area {
+    position: relative;
+    z-index: 999999;
+    width: 100%;
+    height: 100%;
+}
+
+.User-area>.User-avtar .img {
+    border-radius: 30px;
+    border: 2px solid #fff;
+    box-shadow: 0px 0px 12px -5px #000;
+}
+
+.User-area>.User-avtar .img {
+    width: 40px;
+    height: 40px;
+}
+
+.User-area>.User-avtar .img img {
+    filter: invert(1);
+}
+
+
+.User-Dropdown {
+    display: none;
+    position: absolute;
+    border-radius: 7px;
+    background: #fff;
+    box-shadow: 0px 0px 8px rgba(214, 214, 214, 0.78);
+    list-style: none;
+    padding: 0 20px;
+    width: 150px;
+    margin: 0;
+    top: 55px;
+    right: 5%;
+}
+
+.User-Dropdown:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin-left: -0.5em;
+    right: 0px;
+    box-sizing: border-box;
+    border: 7px solid black;
+    border-color: transparent transparent #fff #fff;
+    transform-origin: 0 0;
+    transform: rotate(135deg);
+    box-shadow: -3px 3px 3px -3px rgba(214, 214, 214, 0.78);
+}
+
+.User-Dropdown.U-open {
+    display: block;
+}
+
+.User-Dropdown>li {
+    padding: 0px;
+    line-height: 47px;
+    border-bottom: 1px solid rgba(215, 215, 215, 0.17);
+}
+
+.User-Dropdown>li:last-child {
+    border-bottom: 0px;
+}
+
+.User-Dropdown>li>a {
+    font-size: 13px;
+    padding: 15px 25px 16px 10px;
+    text-decoration: none;
+    color: #1787e0;
+    transition: all 0.2s ease-out;
+}
+
+.User-Dropdown>li:before {
+    content: '';
+    width: 0px;
+    height: 40px;
+    position: absolute;
+    background: #2196f3;
+    margin-top: 4px;
+    border-radius: 0 1px 1px 0;
+    left: 0px;
+    transition: all 0.2s ease;
+}
+
+.User-Dropdown>li:hover:before {
+    width: 5px;
+    border-radius: 30px;
+}
+
+.User-Dropdown>li a:hover {
+    margin-left: 5px;
+}
+
+#result {
+    position: absolute;
+    cursor: pointer;
+    overflow-y: auto;
+    width: 100%;
+    max-width: 80%;
+    box-sizing: border-box;
+    transform: translateY(14vh);
+    height: 100%;
+    z-index: -1;
+}
+
+.link-class:hover {
+    background-color: #f1f1f1;
+}
+
+.main-slider {
+    transform: translateY(20vh); 
+}
+
+
+/* Home Logo  */
+
+.home-logo{
+    background-image: url(assets/img/Logo.png);
+    width: 27vw;
+    height: 22vh;
+    background-size: 100% 100%;
+    position: absolute; 
+    filter: brightness(10) saturate(0);
+    left: 50%;
+    top: 55%;
+    transform: translate(-50%, 200%);
+}
+
+/* Home Logo  */
+
+
+ 
+.main-img:before {
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    animation: bgGlitch 3s both infinite alternate;
+    opacity: 0.6;
+}
+@keyframes bgGlitch {
+    0%, 100% {
+        left: 0;
+        clip-path: none;
+   }
+    13% {
+        left: -5.5px;
+        clip-path: inset(22% 0 2% 0);
+   }
+    18%, 8% {
+        left: 0;
+        clip-path: none;
+   }
+    35% {
+        left: -3.5px;
+        clip-path: inset(17% 0 11% 0);
+   }
+    40%, 30% {
+        left: 0;
+        clip-path: none;
+   }
+    52% {
+        left: 5px;
+        clip-path: inset(8% 0 3% 0);
+   }
+    57%, 47% {
+        left: 0;
+        clip-path: none;
+   }
+    73% {
+        left: 1.5px;
+        clip-path: inset(7% 0 6% 0);
+   }
+    78%, 68% {
+        left: 0;
+        clip-path: none;
+   }
+    94% {
+        left: 1.5px;
+        clip-path: inset(6% 0 20% 0);
+   }
+    99%, 89% {
+        left: 0;
+        clip-path: none;
+   }
+} 
